# semester2

./: README.md
GRAPHS/PracticalWork1/: directed_graph.py  main.py  my_graph.txt  ui.py
GRAPHS/PracticalWork2/: directed_graph.py  g_small.txt  main.py  newGraph.txt  ui.py
HASHCODE/: a_example.out  b_should_be_easy.out  c_no_hurry.out  car.py  d_metropolis.out  e_high_bonus.out  main.py  ride.py  ride_planification.py
OOP/LAB/: jumpers.out  playlist.csv
OOP/LAB/HWLab3-4/: CMakeLists.txt  main.c  main.cpp
OOP/LAB/HWLab3-4/controller/: controller.c  controller.h
OOP/LAB/HWLab3-4/domain/: console.cpp
OOP/LAB/HWLab3-4/domain/entities/: city.cpp  country.c  dynamic_array.c
OOP/LAB/HWLab3-4/headers/: console.h  country.h  dynamic_array.h  operations.h  repository.h
OOP/LAB/HWLab3-4/repository/: repository.c
OOP/LAB/HWLab3-4/ui/: console.c  console.h
OOP/LAB/HWLab5-6/: AppTest.h  CMakeLists.txt  main.cpp
OOP/LAB/HWLab5-6/domain/: DynamicVector.cpp  DynamicVector.h  PlayList.cpp  PlayList.h  Tutorial.cpp  Tutorial.h
OOP/LAB/HWLab5-6/repository/: Repository.cpp
OOP/LAB/HWLab5-6/service/: Controller.cpp  Controller.h
OOP/LAB/HWLab5-6/ui/: UI.cpp  UI.h
OOP/labs/HWLab8-9/: CMakeLists.txt  CoverageTests.cpp  main.cpp  repo_csv_test.csv
OOP/labs/HWLab8-9/controllers/: Controller.cpp
OOP/labs/HWLab8-9/domain/: CSVRepo.cpp  Repo.cpp
OOP/labs/HWLab8-9/domain/models/: Tutorial.cpp
OOP/labs/HWLab8-9/headers/: CSVRepo.h  Controller.h  CoverageTests.h  Playlist.h  Repo.h  UndoAction.h  UndoRemove.h  UndoUpdate.h  Utils.h
OOP/labs/HWLab8-9/ui/: UI.cpp
OOP/labs/HWLab8-9/utils/: Utils.cpp
OOP/labs/HWLab8-9/validators/: Validators.cpp
OOP/labs/TestW11/: CMakeLists.txt
OOP/labs/TestW11/controller/: Controller.cpp
OOP/labs/TestW11/headers/: Rectangle.h  Repo.h  Shape.h  Triangle.h  UI.h
OOP/labs/TestW11/models/: Rectangle.cpp
OOP/labs/TestW11/ui/: UI.cpp
OOP/labs/TestW8/: CMakeLists.txt
OOP/labs/TestW8/domain/: RepoMemory.cpp
OOP/labs/TestW8/domain/models/: MemoryAllocation.cpp
OOP/labs/TestW8/headers/: MemoryAllocation.h  RepoMemory.h
OOP/practiceOOP/: CMakeLists.txt  Stack.cpp  Stack.h  main.cpp
OS/: test8.sh
OS/finalTest/: main.c  outmain
OS/lab5/: crypto.c  out
OS/lab6/: p4  pb4.c  proc  process.c
OS/lab9/: CMakeLists.txt  main.c  main_test.c
OS/practiceBash/: 1ex.sh  2ex.sh  3ex.sh  4ex.sh  test.sh
OS/practiceBash2/: 4p.sh  5p.sh  6p.sh  7p.sh  8p.sh  text
OS/practiceTestProcesses/: CMakeLists.txt  main.c  main_3.c  main_string.c  w10test.c
OS/practiceThreads/: CMakeLists.txt  main.c
OS/testw12/: main.c  (+1 more)
SDA/: Huffman Encoding.docx
SDA/Huffman/: CMakeLists.txt  input_file.txt  main.cpp  output_huffman.txt
SDA/Huffman/adts/: BinaryTree.cpp  PreorderIterator.cpp  PriorityQueue.cpp
SDA/Huffman/headers/: BinaryTree.h  PreorderIterator.h  PriorityQueue.h
(+137 files in other folders)
